--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -38,35 +38,35 @@
         <thead>
             <tr><th></th><th>Set</th><th>Generator Created Date</th><th>Prerelease Date</th><th>Release Date</th></tr>
         </thead>
-        @Component.Invoke("SetSummary", new SetSummary { Code = "cn2", IsFutureSet = true })
-        @Component.Invoke("SetSummary", new SetSummary { Code = "ema", IsFutureSet = true })
+        @Component.Invoke("SetSummary", new SetSummary { Code = "cn2" })
+        @Component.Invoke("SetSummary", new SetSummary { Code = "ema" })
         <tbody class="block">
             <tr class="title"><td colspan="5">Shadows over Innistrad Block</td></tr>
-            @Component.Invoke("SetSummary", new SetSummary { Code = "emn", IsFutureSet = true })
-            @Component.Invoke("SetSummary", new SetSummary { Code = "soi", IsFutureSet = true })
+            @Component.Invoke("SetSummary", new SetSummary { Code = "emn" })
+            @Component.Invoke("SetSummary", new SetSummary { Code = "soi" })
         </tbody>
         <tbody>
-            @Component.Invoke("SetSummary", new SetSummary { Code = "c15", IsCurrentSet = true })
+            @Component.Invoke("SetSummary", new SetSummary { Code = "c15" })
         </tbody>
         <tbody class="block">
             <tr class="title"><td colspan="5">Battle for Zendikar Block</td></tr>
-            @Component.Invoke("SetSummary", new SetSummary { Code = "ogw", IsCurrentSet = true })
-            @Component.Invoke("SetSummary", new SetSummary { Code = "bfz", IsCurrentSet = false })
+            @Component.Invoke("SetSummary", new SetSummary { Code = "ogw" })
+            @Component.Invoke("SetSummary", new SetSummary { Code = "bfz" })
         </tbody>
         <tbody>
-            @Component.Invoke("SetSummary", new SetSummary { Code = "v15", IsCurrentSet = true })
+            @Component.Invoke("SetSummary", new SetSummary { Code = "v15" })
         </tbody>
         <tbody>
-            @Component.Invoke("SetSummary", new SetSummary { Code = "ori", IsCurrentSet = true })
+            @Component.Invoke("SetSummary", new SetSummary { Code = "ori" })
         </tbody>
         <tbody>
-            @Component.Invoke("SetSummary", new SetSummary { Code = "mm2", IsCurrentSet = true })
+            @Component.Invoke("SetSummary", new SetSummary { Code = "mm2" })
         </tbody>
         <tbody>
-            @Component.Invoke("SetSummary", new SetSummary { Code = "tpr", IsCurrentSet = true })
+            @Component.Invoke("SetSummary", new SetSummary { Code = "tpr" })
         </tbody>
         <tbody>
-            @Component.Invoke("SetSummary", new SetSummary { Code = "ddo", IsCurrentSet = true })
+            @Component.Invoke("SetSummary", new SetSummary { Code = "ddo" })
         </tbody>
         <tbody>
             @Component.Invoke("SetSummary", new SetSummary { Code = "c14" })
@@ -78,10 +78,10 @@
             @Component.Invoke("SetSummary", new SetSummary { Code = "ktk" })
         </tbody>
         <tbody>
-            @Component.Invoke("SetSummary", new SetSummary { Code = "v14", ReleaseTitle = "from @GavinVerhey" })
+            @Component.Invoke("SetSummary", new SetSummary { Code = "v14" })
         </tbody>
         <tbody class="core">
-            @Component.Invoke("SetSummary", new SetSummary { Code = "m15", IsCurrentSet = true })
+            @Component.Invoke("SetSummary", new SetSummary { Code = "m15" })
         </tbody>
         <tbody>
             @Component.Invoke("SetSummary", new SetSummary { Code = "ovm" })
