- added update news item

--- a/src/mtgen/Views/Set/ogw.cshtml
+++ b/src/mtgen/Views/Set/ogw.cshtml
@@ -9,6 +9,10 @@
     Model.Updates = new List<Update>()
     {
         new Update() {
+            UpdateDate = new DateTime(2016,3,1),
+            HtmlString = "Evening: Added updated spindown life counters and deck divider packins."
+        },
+        new Update() {
             UpdateDate = new DateTime(2016,1,11),
             HtmlString = "Evening: Lowered Expedition chance and added tokens."
         }
