--- a/src/mtgen/Views/Home/Index.cshtml
+++ b/src/mtgen/Views/Home/Index.cshtml
@@ -7,7 +7,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Magic: The Gathering: Sealed Deck Generator</title>
-    <meta name="Description" content="Magic: The Gathering Sealed Deck Card Generator, Simulat es opening boosters for many sets">
+    <meta name="Description" content="Magic: The Gathering Sealed Deck Card Generator: Generate accurate random Magic: The Gathering boosters and other such madness.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link href="http://fonts.googleapis.com/css?family=IM+Fell+DW+Pica:400,400italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
     <link rel='stylesheet' href='@Url.Content("~/css/home.css")' type='text/css' />
 </head>
 <body class="home">
@@ -22,43 +25,35 @@
         ga('create', 'UA-25921884-1', 'auto');
         ga('send', 'pageview');
     </script>
-    <h1>Magic: The Gathering Sealed Deck Card Generator</h1>
-    <img src="@Url.Content("~/images/mtg-logo.jpg")" width="450" height="128" alt="Magic the Gathering" />
-    <p><strong>Welcome!</strong></p>
-    <p>This site exists because I'm not a very good Magic player. Really I only play during the prereleases, and I've half-forgotten the rules every time. It takes me forever to build my deck, and my poor friends need to use some of their time to help me out. That's not really cool. So to help me, thank them, and hopefully help others, I present to you my crappy thrown-together-in-a-Saturday-afternoon MtG Card Generator!</p>
-    <p>Well, I've evolved it considerably since it started. But that's how it started.</p>
-    <p>The idea is to let it generate, using a hopefully <em>somewhat</em> accurate algorithm, what you're get at a <a href="http://www.wizards.com/magic/tcg/events.aspx?x=mtgcom/events/prereleases">MtG Prerelease</a> event. Then you can take your time, check out the cards, try to remember the rules, and maybe figure out what deck you'd build.</p>
-    <p>I enjoy building and enhancing this thing, so I'll try to keep doing it for every new set.</p>
-    <p>Technically these Prereleases use a format called <a href="http://www.wizards.com/Magic/Magazine/Article.aspx?x=mtgcom/daily/sw63">Sealed Deck</a>, where you get 6 packs of sealed boosters, open them, and construct your deck from only those cards.</p>
-    <p class="twitter-follow">
-        Want the latest updates? Follow <a href="https://twitter.com/mtggen" target="_blank">@@mtggen on Twitter</a> or <a href="http://eepurl.com/bbdyO5">subscribe to the email update list</a>.
-    </p>
-    <p>12-Nov-2014: This project has now been <a href="https://github.com/copperdogma/mtgen">open sourced on Github</a>. I will continue creating new generators as new sets come out, but if you have something you wish to contribute I'd love to hear from you. Enjoy!</p>
-    <h2>Sealed Deck Generator Sets</h2>
-    <table>
-        <thead>
-            <tr><th></th><th>Set</th><th>Generator Created Date</th><th>Prerelease Date</th><th>Release Date</th></tr>
-        </thead>
+    <header>
+        <img src="@Url.Content("~/images/logo-mtg.png")" alt="Magic the Gathering" />
+        <h1>Sealed Deck Card Generator</h1>
+        <h2>Generate accurate random Magic: The Gathering boosters and other such madness.</h2>
+        <div class="links">
+            <a href="http://eepurl.com/bbdyO5" class="button" title="Subscribe to email updates">Subscribe</a>
+            <a href="https://twitter.com/mtggen" class="button" title="Follow @@mtggen on Twitter">@@mtggen</a>
+            <a href="https://github.com/copperdogma/mtgen" class="button" title="Open sourced on Github">github</a>
+        </div>
+    </header>
+    <main>
         @foreach (var set in sets)
-        {
-            @if (set.IsBlockSet)
             {
-                <tbody class="block">
-                    <tr class="title"><td colspan="5">@set.Block Block</td></tr>
+            @if (set.IsBlockSet)
+                {
+                <div class="block">
+                    <h2 class="block-title">@set.Block Block</h2>
                     @foreach (var blockSet in set.BlockSets)
                     {
                         @Component.Invoke("SetSummary", blockSet)
                     }
-                </tbody>
+                </div>
             }
             else
             {
                 @Component.Invoke("SetSummary", set)
             }
         }
-    </table>
-
-    <p>Where are the previous sets? I started the generator on Innistrad, so older ones don't exist. I may add them one day. If you have a particular set you really want to see, <a href="mailto:cam.marsollier@gmail.com">let me know</a>.</p>
+    </main>
     <footer>
         <p>Created by: Cam Marsollier - <a href="mailto:cam.marsollier@gmail.com">cam.marsollier@gmail.com</a></p>
         <p>Wizards of the Coast, Magic: The Gathering, and their logos are trademarks of Wizards of the Coast LLC in the United States and other countries. © 2009 Wizards. All Rights Reserved.</p>
