--- a/src/mtgen/wwwroot/css/home.css
+++ b/src/mtgen/wwwroot/css/home.css
@@ -1,45 +1,156 @@
-﻿img {
-	float: right;
+﻿* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;    
 }
-img[itemprop=image] {
-	display: block;
-	float: none;
-	margin: 0 auto;
-	max-width: 13em;
-	max-height: 3em;
-	padding: 1em;
+
+html {
+	-webkit-text-size-adjust: none;
+	-ms-text-size-adjust: none;
 }
-.ad {
-	float: right;
-	margin-left: 1em;
+
+body {
+    background: url(/images/home-bg.jpg) no-repeat 0 0 #c6c6c6;
+   	font-family: "PT Sans", Helvetica, Arial, sans-serif; /* imported weights: 400, 400 Italic */
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 1.5;
+    margin: 0;
+    text-align: center;
 }
-table {
-	text-align: left;
-    width: 100%;
+header, main {
+    max-width: 75em;
+    margin: 0 auto;
 }
-td, th {
+header img {
+    display: block;
+    margin: 1em auto;
+    max-width: 12em;
+}
+header h1 {
+    color: #fff;
+	font-family: 'IM Fell DW Pica', serif; /* imported weights: 400, 700 */
+    font-size: 3em;
+    font-weight: inherit;
+    line-height: 1;
+    margin: .2em .5em;
+    text-shadow: 1px 1px 1px #000;
+}
+header h2 {
+    color: #fff;
+    font-size: 1em;
+    font-weight: inherit;
+    margin: 0 auto;
+    max-width: 75%;
+}
+header .links {
+    margin: 1.5em 0;
+}
+a.button {
+	background: #464646;
+	border: 1px solid #555;
+	color: #b2b2b2;
 	padding: .5em 1em;
+	text-align: center;
+	text-decoration: none;
 }
-table tbody tr {
-	height: 6em;
+a.button.active, .button.active {
+	background: #303042;
+	color: #a7abea;
 }
-table tbody tr.title {
-	height: auto;
+a.button:hover {
+	background: #000;
 }
+
+footer {
+    background: rgba(0,0,0,.5);
+    color: #b2b2b2;
+    margin-top: 5em;
+    min-height: 5em;
+    padding: 1em;
+}
+footer a {
+	color: #fff;
+}
+
 .block {
-	background: gainsboro;
+    border-bottom: 1em solid #464646;
+    margin: 2em 0;
 }
-.current {
-	background: lightblue;
+.block-title {
+    background: #464646;
+    border: 1px solid #555;
+    color: #fff;
+    font-size: 1em;
+    font-weight: normal;
+    margin: 0;
+    padding: .3em 1em;
 }
-.title {
-	background: gray;
-	color: white;
-	font-weight: bold;
+a.set-link {
+    color: inherit;
+    display: block;
+    text-decoration: inherit;
 }
-.future {
-	opacity: .7;
+.set {
+    background: rgba(255,255,255,.8);
+    padding: 1.5em;
 }
-.error {
-	color: red;
+.set:nth-child(even), a.set-link:nth-child(even) .set {
+    background: rgba(200,200,200,.8);
+}
+a.set-link:hover {
+    background: #444;
+}
+.set-logo img {
+    max-height: 4em;
+    max-width: 13em;
+}
+.set-dates span.none {
+    display: none;
+}
+
+@media only screen and (min-width: 52em) {
+    header img {
+        display: inline-block;
+        margin: .5em 0 0 -1em;
+    }
+    header h1 {
+        display: inline-block;
+        margin: .2em .5em;
+        vertical-align: top;
+        font-size: 3.4em;
+    }
+    .set {
+        display: table;
+        height: 5em;
+        text-align: left;
+        width: 100%;
+    }
+    .set>* {
+        display: table-cell;
+        vertical-align: middle;
+    }
+    .set-logo {
+        text-align: center;
+        width: 18em;
+    }
+    .set-name {
+        max-width: 30em;
+        padding: 0 2em;
+        width: 22em;
+    }
+    .set-count {
+        width: 10em;
+    }
+    .set-dates {
+        width: 20em;
+    }
+    .set-dates span {
+        display: inline-block;
+        width: 5.2em;
+    }
+    .set-dates span.none {
+        display: inline-block;
+        visibility: hidden;
+    }
 }
