- added Coming Soon to mobile future sets

--- a/src/mtgen/Views/Home/Components/SetSummary/Default.cshtml
+++ b/src/mtgen/Views/Home/Components/SetSummary/Default.cshtml
@@ -31,6 +31,10 @@
             }
         </div>
     </div>
+    @if (Model.IsFutureSet)
+    {
+        <div class="future-set"><em>Coming Soon</em></div>
+    }
 </div>
 @if (Model.GeneratorCreatedDate.HasValue)
 {
