- added margin to p (oops)

--- a/src/mtgen/wwwroot/css/home.css
+++ b/src/mtgen/wwwroot/css/home.css
@@ -124,6 +124,9 @@ a.set-link:hover {
     padding: 2em;
     text-align: left;
 }
+.content p {
+    margin: 1em 0;
+}
 .content a {
     color: #fff;
 }
