- Now supports loading double-faced card data from wotc and mtgsalvation. - getCardColourFromCard() now defaults to the existing card colour if one exists. - Now supports rendering double-faced cards (side-by-side like I used to create manually).

--- a/src/mtgen/wwwroot/css/generator.css
+++ b/src/mtgen/wwwroot/css/generator.css
@@ -371,6 +371,10 @@ main > em {
 .card img {
 	margin: 0 .6em 0 0;
 }
+.card.doubleface img:first-child {
+    margin-right: 0;
+}
+
 @media (min-width: 480px) and (max-width: 610px) {
 	#product-content .result .card img {
 		height: 321px;
