- adjusted booster DFC slots - adjusted last two booster slots: double face checklist/land, tip card/token - added prerelease packin placeholders

--- a/src/mtgen/Views/Set/soi.cshtml
+++ b/src/mtgen/Views/Set/soi.cshtml
@@ -9,6 +9,10 @@
     Model.Updates = new List<Update>()
     {
         new Update() {
+            UpdateDate = new DateTime(2016,3,30),
+            HtmlString = "Evening: Adjusted Double-Faced card appearance/slots and added Prerelease packin placeholders."
+        },
+        new Update() {
             UpdateDate = new DateTime(2016,3,28),
             HtmlString = "Evening: Prerelease section added."
         },
