- Removed tip cards and fixed some card data.

--- a/src/mtgen/Views/Set/ovm.cshtml
+++ b/src/mtgen/Views/Set/ovm.cshtml
@@ -5,6 +5,10 @@
     Model.Updates = new List<Update>()
     {
         new Update() {
+            UpdateDate = new DateTime(2016,7,16),
+            HtmlString = "Removed tip cards and fixed some card data."
+        },
+        new Update() {
             UpdateDate = new DateTime(2014,8,23),
             HtmlString = "Upgraded to the new generator version."
         },
