--- a/src/mtgen/Areas/Admin/Views/Draw/Index.cshtml
+++ b/src/mtgen/Areas/Admin/Views/Draw/Index.cshtml
@@ -9,13 +9,14 @@
 
 <div class="table-responsive">
     <table class="table table-striped">
-        <thead><tr><th>Draw Url</th><th>Draw json</th><th>Use Count</th><th>Last Viewed</th></tr></thead>
+        <thead><tr><th>Set</th><th>Draw Url</th><th>Draw json</th><th>Use Count</th><th>Last Viewed</th></tr></thead>
         <tbody>
             @foreach (var draw in await Model)
             {
                 var drawUrl = $"/{draw.SetCode}?draw={draw.DrawId}";
                 var formattedJsonUrl = Url.Action(nameof(DrawController.GetDrawAsFormattedJson), new { setCode = draw.SetCode, drawId = draw.DrawId });
                 <tr>
+                    <td><a href="/@draw.SetCode" target="_blank">@draw.SetCode</a></td>
                     <td><a href="@drawUrl" target="_blank">@draw.DrawId</a></td>
                     <td><a href="@formattedJsonUrl" target="_blank">View json</a></td>
                     <td>@draw.UseCount</td>
