- soi: Added proper images for checklist cards and spindown life counters

--- a/src/mtgen/Views/Set/soi.cshtml
+++ b/src/mtgen/Views/Set/soi.cshtml
@@ -9,6 +9,10 @@
     Model.Updates = new List<Update>()
     {
         new Update() {
+            UpdateDate = new DateTime(2016,7,9),
+            HtmlString = "Evening: Added proper images for checklist cards and spindown life counters."
+        },
+        new Update() {
             UpdateDate = new DateTime(2016,3,30),
             HtmlString = "Evening: Adjusted Double-Faced card appearance/slots and added Prerelease packin placeholders."
         },
