--- a/src/mtgen/Views/Set/cn2.cshtml
+++ b/src/mtgen/Views/Set/cn2.cshtml
@@ -9,11 +9,11 @@
     //Model.Incomplete = false;
     //Model.CardFiles = new List<string>() { "cardsMain.json", "cardsToken.json", "cardsOther.json" };
     //Model.PackFiles = new List<string>() { "packs.json" };
-    //Model.Updates = new List<Update>()
-    //{
-    //    new Update() {
-    //        UpdateDate = new DateTime(2016,3,30),
-    //        HtmlString = "Evening: Adjusted Double-Faced card appearance/slots and added Prerelease packin placeholders."
-    //    }
-    //};
+    Model.Updates = new List<Update>()
+    {
+        new Update() {
+            UpdateDate = new DateTime(2016,8,24),
+            HtmlString = "Evening: Last slot is now Conspiracy-only. Main cards can now include draft-affecting cards."
+        }
+    };
 }
