--- a/src/mtgen/Views/Set/rav.cshtml
+++ b/src/mtgen/Views/Set/rav.cshtml
@@ -8,11 +8,11 @@
     //Model.Incomplete = false;
     //Model.CardFiles = new List<string>() { "cardsMain.json", "cardsToken.json", "cardsOther.json" };
     //Model.PackFiles = new List<string>() { "packs.json" };
-    //Model.Updates = new List<Update>()
-    //{
-    //    new Update() {
-    //        UpdateDate = new DateTime(2015,11,14),
-    //        HtmlString = "Afternoon: Added Plunder the Graves deck (thanks, DoubleFried!)."
-    //    }
-    //};
+    Model.Updates = new List<Update>()
+    {
+        new Update() {
+            UpdateDate = new DateTime(2016,11,21),
+            HtmlString = "Dual lands will now show up in boosters. Thanks, Alexander!"
+        }
+    };
 }
