- OGW: Non-full-art Wastes are no longer in the boosters (full-art only) - reported by Daniel Hawkins via github

--- a/src/mtgen/Views/Set/ogw.cshtml
+++ b/src/mtgen/Views/Set/ogw.cshtml
@@ -9,6 +9,10 @@
     Model.Updates = new List<Update>()
     {
         new Update() {
+            UpdateDate = new DateTime(2017,1,12),
+            HtmlString = "Evening: Non-full-art Wastes are no longer in the boosters (full-art only)."
+        },
+        new Update() {
             UpdateDate = new DateTime(2016,3,1),
             HtmlString = "Evening: Added updated spindown life counters and deck divider packins."
         },
