- added link rel="prerender" and link rel="dns-prefetch" to <head> to speed up renderng

--- a/src/mtgen/Views/Shared/SetView.cshtml
+++ b/src/mtgen/Views/Shared/SetView.cshtml
@@ -33,6 +33,7 @@
     <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
     <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
+    <link rel="dns-prefetch" href="//media.wizards.com">
 </head>
 <body class="home">
     <script>
